--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "4.17.3",
     "node-fetch": "3.3.0",
     "prettier": "2.8.1",
+    "sass": "^1.57.1",
     "typescript": "4.9.4",
     "undici": "5.14.0",
     "vite": "4.0.1",
