--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.16.1",
+    "@builder.io/qwik": "0.16.2",
     "@builder.io/qwik-city": "0.0.128",
     "@types/compression": "^1.7.2",
     "@types/eslint": "8.4.10",
     "@types/express": "4.17.13",
-    "@types/node": "^18.11.16",
-    "@types/node-fetch": "latest",
+    "@types/node": "^18.11.18",
+    "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "5.46.1",
     "@typescript-eslint/parser": "5.46.1",
     "compression": "^1.7.4",
